Allow full screen. Closes #1

--- a/MacGap/en.lproj/MainMenu.xib
+++ b/MacGap/en.lproj/MainMenu.xib
@@ -1356,6 +1356,7 @@
 				<string key="NSScreenRect">{{0, 0}, {1680, 1028}}</string>
 				<string key="NSMinSize">{480, 382}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<int key="NSWindowCollectionBehavior">128</int>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="976324537">
